reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__work.rs_line_128_col_5_001.log

*** crates/tracewake-core/src/actions/defs/work.rs:128:5: replace build_work_completion_events -> Result<Vec<EventEnvelope>, ApplyError> with Ok(vec![Default::default()])

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/work.rs
+++ replace build_work_completion_events -> Result<Vec<EventEnvelope>, ApplyError> with Ok(vec![Default::default()])
@@ -120,101 +120,17 @@
     state: &PhysicalState,
     agent_state: &AgentState,
     log: &EventLog,
     work_started_event: &EventEnvelope,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
     completion_tick: SimTick,
 ) -> Result<Vec<EventEnvelope>, ApplyError> {
-    let actor_id = work_started_event
-        .actor_id
-        .clone()
-        .ok_or_else(|| ApplyError::BadPayload {
-            key: "actor_id",
-            value: "missing".to_string(),
-        })?;
-    let working_ticks = classify_actor_tick_regimes_with_start(
-        log,
-        &actor_id,
-        work_started_event.sim_tick,
-        completion_tick,
-        Some(work_started_event),
-    )
-    .working_ticks;
-    let fatigue_delta =
-        payload_i32(work_started_event, "fatigue_delta_per_tick")? * working_ticks as i32;
-    let hunger_delta =
-        payload_i32(work_started_event, "hunger_delta_per_tick")? * working_ticks as i32;
-    if let Some((blocker_kind, reason)) =
-        work_completion_failure(state, agent_state, work_started_event)?
-    {
-        let mut events = vec![work_failed_from_start_event(
-            work_started_event,
-            ordering_key,
-            content_manifest_id,
-            completion_tick,
-            working_ticks,
-            fatigue_delta,
-            hunger_delta,
-            blocker_kind,
-            reason,
-        )?];
-        events.extend(work_need_events(
-            agent_state,
-            work_started_event,
-            ordering_key,
-            content_manifest_id,
-            completion_tick,
-            NeedKind::Fatigue,
-            fatigue_delta,
-            working_ticks,
-        )?);
-        events.extend(work_need_events(
-            agent_state,
-            work_started_event,
-            ordering_key,
-            content_manifest_id,
-            completion_tick,
-            NeedKind::Hunger,
-            hunger_delta,
-            working_ticks,
-        )?);
-        return Ok(events);
-    }
-    let mut events = vec![work_completed_event(
-        work_started_event,
-        ordering_key,
-        content_manifest_id,
-        completion_tick,
-        working_ticks,
-        fatigue_delta,
-        hunger_delta,
-    )?];
-    events.extend(work_need_events(
-        agent_state,
-        work_started_event,
-        ordering_key,
-        content_manifest_id,
-        completion_tick,
-        NeedKind::Fatigue,
-        fatigue_delta,
-        working_ticks,
-    )?);
-    events.extend(work_need_events(
-        agent_state,
-        work_started_event,
-        ordering_key,
-        content_manifest_id,
-        completion_tick,
-        NeedKind::Hunger,
-        hunger_delta,
-        working_ticks,
-    )?);
-    Ok(events)
+    Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
 }
 
 fn work_completion_failure(
     state: &PhysicalState,
     agent_state: &AgentState,
     work_started_event: &EventEnvelope,
 ) -> Result<Option<(&'static str, &'static str)>, ApplyError> {
     let Some(actor_id) = work_started_event.actor_id.as_ref() else {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/defs/work.rs` has changed (1781911698.683924786s, 6s after last build at 1781911692.091924771s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `crate::need_accounting::classify_actor_tick_regimes_with_start`
  --> crates/tracewake-core/src/actions/defs/work.rs:13:5
   |
13 | use crate::need_accounting::classify_actor_tick_regimes_with_start;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/work.rs:128:13
    |
128 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/work.rs:128:13
    |
128 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
